Refactor all the things

--- a/404.html
+++ b/404.html
@@ -31,7 +31,10 @@
       <h1 class="logo">Sassline</h1>
       <div id="nav" class="main-nav">
         <ul class="main-nav__list">
-          <li><a href="http://sassline.com">Home</span></a></li><li><a href="http://github.com/designbyjake/sassline">Github</a></li><li><a href="http://twitter.com/designbyjake">Twitter</a></li>
+          <li><a href="http://sassline.com">Home</span></a></li
+         ><li><a href="http://demo.sassline.com">Demo</span></a></li
+         ><li><a href="http://github.com/designbyjake/sassline">Github</a></li
+         ><li><a href="http://twitter.com/designbyjake">Twitter</a></li>
         </ul>
       </div>
     </div>
