--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
       <h1 class="logo">Sassline</h1>
       <div id="nav" class="main-nav">
         <ul class="main-nav__list">
-          <li><a href="http://sassline.com">Home</span></a></li><li><a href="http://github.com/designbyjake/sassline">Github</a></li><li><a href="http://twitter.com/designbyjake">Twitter</a></li>
+          <li><a href="http://sassline.com">Home</span></a></li
+         ><li><a href="http://demo.sassline.com">Demo</span></a></li
+         ><li><a href="http://github.com/designbyjake/sassline">Github</a></li
+         ><li><a href="http://twitter.com/designbyjake">Twitter</a></li>
         </ul>
       </div>
     </div>
@@ -111,15 +114,15 @@
       <p class="caption">Caption text</p>
 
       <ol>
-          <li>Ordered list element 1</li>
-          <li>Ordered list element 2</li>
-          <li>Ordered list element 3</li>
+          <li>Ordered list element one</li>
+          <li>Ordered list element two</li>
+          <li>Ordered list element three</li>
       </ol>
 
       <ul>
-          <li>Unordered list element 1</li>
-          <li>Unordered list element 2</li>
-          <li>Unordered list element 3</li>
+          <li>Unordered list element one</li>
+          <li>Unordered list element two</li>
+          <li>Unordered list element three</li>
       </ul>
     </div>
   </section>
