Demo typekits removed

--- a/404.html
+++ b/404.html
@@ -12,14 +12,14 @@
   <script src="/assets/js/respond.min.js"></script>
   <![endif]-->
   <script>
-  // Example of how to load in a smaller typekit kit on mobile and a larger character kit elsewhere
+  // Example of how to load in a smaller Typekit kit on mobile and a larger character kit elsewhere
   var kit;
   if( /Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent) ) {
-    // Mobile kit - default characters
-    kit='kjn7uxg';
+    // Mobile kit - default characters (swap in your kit code)
+    kit='xxx1xxx';
   } else {
-    // Larger kit - all characters enabled
-    kit='inu1jda';
+    // Larger kit - all characters enabled (swap in your kit code)
+    kit='xxx2xxx';
   };
   document.write('\x3Cscript src="//use.typekit.net/'+kit+'.js">\x3C/script>');
   </script>
