--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   var kit;
   if( /Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent) ) {
     // Mobile kit - default characters (swap in your kit code)
-    kit='xxx1xxx';
+    kit='cer2emf';
   } else {
     // Larger kit - all characters enabled (swap in your kit code)
-    kit='xxx2xxx';
+    kit='fvn7rlo';
   };
   document.write('\x3Cscript src="//use.typekit.net/'+kit+'.js">\x3C/script>');
   </script>
@@ -31,10 +31,9 @@
       <h1 class="logo">Sassline</h1>
       <div id="nav" class="main-nav">
         <ul class="main-nav__list">
-          <li><a href="http://sassline.com">Home</span></a></li
+          <li><a href="http://sassline.com">Website</span></a></li
          ><li><a href="http://demo.sassline.com">Demo</span></a></li
-         ><li><a href="http://github.com/designbyjake/sassline">Github</a></li
-         ><li><a href="http://twitter.com/designbyjake">Twitter</a></li>
+         ><li><a href="http://github.com/designbyjake/sassline">Github</a></li>
         </ul>
       </div>
     </div>
