--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   var kit;
   if( /Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent) ) {
     // Mobile kit - default characters (swap in your kit code)
-    kit='cer2emf';
+    kit='xxx1xxx';
   } else {
     // Larger kit - all characters enabled (swap in your kit code)
-    kit='fvn7rlo';
+    kit='xxx2xxx';
   };
   document.write('\x3Cscript src="//use.typekit.net/'+kit+'.js">\x3C/script>');
   </script>
