Tidy and refactor

--- a/index.html
+++ b/index.html
@@ -4,21 +4,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sassline</title>
-  <link rel="stylesheet" href="/assets/css/style.css" />
+  <link rel="stylesheet" href="/assets/css/style.min.css" />
   <link rel="shortcut icon" href="/assets/img/favicon.ico" />
   <script src="/assets/js/responsive-nav.min.js"></script>
-  <!--[if lt IE 9]>
-  <script src="/assets/js/html5.min.js"></script>
-  <![endif]-->
   <script>
-  // Example of how to load in a smaller Typekit kit on mobile and a larger character kit elsewhere
+  // Example of how to load in a smaller Typekit kit at smaller viewport widths. Every little helps.
   var kit;
-  if( /Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent) ) {
-    // Mobile kit - default characters (swap in your kit code)
-    kit='xxx1xxx';
+  if( window.innerWidth < 800 ) {
+    // Smaller kit - default characters (swap in your kit code)
+    kit='frh2lrk';
   } else {
     // Larger kit - all characters enabled (swap in your kit code)
-    kit='xxx2xxx';
+    kit='ouk5bdy';
   };
   document.write('\x3Cscript src="//use.typekit.net/'+kit+'.js">\x3C/script>');
   </script>
@@ -38,14 +35,12 @@
     </div>
   </header>
   <section>
-    <div class="container">
+    <div class="container typeset">
       <h1>Lorem ipsum dolor sit&nbsp;amet</h1>
 
       <p class="caption">Labore reprehenderit corporis ullam distinctio&nbsp;ex.</p>
 
       <p>Consectetur adipisicing elit, alias at autem magna aliquid <a href="#top">quam proident</a> quis aliquam. temporibus minus eius veniam cupidatat ex, voluptas fuga, quos, mollitia incidunt do officia facilis. molestiae consequat excepturi laborum perferendis tempor minim eiusmod minim minus quia&nbsp;sint.</p>
-
-      <h2>Voluptates mollitia quod tempore laboris&nbsp;commodi</h2>
 
       <ol>
           <li>Perferendis tempor</li>
@@ -55,6 +50,8 @@
       </ol>
 
       <p>Quos atque officia quod. <i>Suscipit delectus</i> cupidatat, quia nulla numquam aute cillum proident. Maiores iusto culpa molestias quam id tenetur saepe impedit reiciendis itaque ducimus itaque nostrud. Tempor aliquip, culpa earum itaque sed consequatur minus aliquip reprehenderit nihil veniam tempora do maxime omnis reiciendis elit&nbsp;tempora.</p>
+
+      <h2>Voluptates mollitia quod tempore laboris&nbsp;commodi</h2>
 
       <p>Proident dolores corrupti consequatur voluptatibus labore commodi quos. <b>Incidunt mollitia</b> tempora assumenda laborum voluptate accusamus dolore optio incididunt. Maiores at duis consequatur corrupti consectetur, aliquam optio commodo accusamus distinctio, necessitatibus&nbsp;nostrum.</p>
 
@@ -122,22 +119,6 @@
           <li>Unordered list element two</li>
           <li>Unordered list element three</li>
       </ul>
-
-      <hr>
-
-      <h1>The Adventures of Sherlock Holmes</h1>
-
-      <p class="caption">By Sir Arthur Conan Doyle</p>
-
-      <h2>A Scandal in Bohemia</h2>
-
-      <h3>Chapter 1</h3>
-
-      <p>To Sherlock Holmes she is always <em>the</em> woman. I have seldom heard him mention her under any other name. In his eyes she eclipses and predominates the whole of her sex. It was not that he felt any emotion akin to love for Irene Adler. All emotions, and that one particularly, were abhorrent to his cold, precise but admirably balanced mind. He was, I take it, the most perfect reasoning and observing machine that the world has seen, but as a lover he would have placed himself in a false position. He never spoke of the softer passions, save with a gibe and a sneer. They were admirable things for the observer &ndash; excellent for drawing the veil from men&rsquo;s motives and actions. But for the trained reasoner to admit such intrusions into his own delicate and finely adjusted temperament was to introduce a distracting factor which might throw a doubt upon all his mental results. Grit in a sensitive instrument, or a crack in one of his own high-power lenses, would not be more disturbing than a strong emotion in a nature such as his. And yet there was but one woman to him, and that woman was the late Irene Adler, of dubious and questionable memory.</p>
-
-      <p>I had seen little of Holmes lately. My marriage had drifted us away from each other. My own complete happiness, and the home-centred interests which rise up around the man who first finds himself master of his own establishment, were sufficient to absorb all my attention, while Holmes, who loathed every form of society with his whole Bohemian soul, remained in our lodgings in Baker Street, buried among his old books, and alternating from week to week between cocaine and ambition, the drowsiness of the drug, and the fierce energy of his own keen nature. He was still, as ever, deeply attracted by the study of crime, and occupied his immense faculties and extraordinary powers of observation in following out those clues, and clearing up those mysteries which had been abandoned as hopeless by the official police. From time to time I heard some vague account of his doings: of his summons to Odessa in the case of the Trepoff murder, of his clearing up of the singular tragedy of the Atkinson brothers at Trincomalee, and finally of the mission which he had accomplished so delicately and successfully for the reigning family of Holland. Beyond these signs of his activity, however, which I merely shared with all the readers of the daily press, I knew little of my former friend and companion.</p>
-
-      <p>One night &ndash; it was on the twentieth of March, 1888 &ndash; I was returning from a journey to a patient (for I had now returned to civil practice), when my way led me through Baker Street. As I passed the well-remembered door, which must always be associated in my mind with my wooing, and with the dark incidents of the Study in Scarlet, I was seized with a keen desire to see Holmes again, and to know how he was employing his extraordinary powers. His rooms were brilliantly lit, and, even as I looked up, I saw his tall, spare figure pass twice in a dark silhouette against the blind. He was pacing the room swiftly, eagerly, with his head sunk upon his chest and his hands clasped behind him. To me, who knew his every mood and habit, his attitude and manner told their own story. He was at work again. He had risen out of his drug-created dreams and was hot upon the scent of some new problem. I rang the bell and was shown up to the chamber which had formerly been in part my own.</p>
 
     </div>
   </section>
