--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sassline</title>
-  <link rel="stylesheet" href="/assets/css/style.min.css" />
-  <link rel="shortcut icon" href="/assets/img/favicon.ico" />
+  <link rel="stylesheet" href="/assets/css/style.min.css">
+  <link rel="shortcut icon" href="/assets/img/favicon.ico">
   <script src="/assets/js/responsive-nav.min.js"></script>
   <script>
   // Example of how to load in a smaller Typekit kit at smaller viewport widths. Every little helps.
@@ -21,7 +21,9 @@
   </script>
   <script>try{Typekit.load();}catch(e){}</script>
 </head>
+
 <body>
+
   <header class="global-header">
     <h1 class="global-header__logo">Sassline</h1>
     <nav class="main-nav">
@@ -31,6 +33,7 @@
       </ul>
     </nav>
   </header>
+
   <section>
     <div class="container typeset">
       <h1>Lorem ipsum dolor sit&nbsp;amet</h1>
@@ -116,9 +119,9 @@
           <li>Unordered list element two</li>
           <li>Unordered list element three</li>
       </ul>
-
     </div>
   </section>
+
   <footer class="global-footer">
     <p>Hodor</p>
   </footer>
