--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 
       <p>Consectetur adipisicing elit, alias at autem magna aliquid <a href="#top">quam proident</a> quis aliquam. temporibus minus eius veniam cupidatat ex, voluptas fuga, quos, mollitia incidunt do officia facilis. molestiae consequat excepturi laborum perferendis tempor minim eiusmod minim minus quia&nbsp;sint.</p>
 
+      <p>Quos atque officia quod. <i>Suscipit delectus</i> cupidatat, quia nulla numquam aute cillum proident. Maiores iusto culpa molestias quam id tenetur saepe impedit reiciendis itaque ducimus itaque nostrud. Tempor aliquip, culpa earum itaque sed consequatur minus aliquip reprehenderit nihil veniam tempora do maxime omnis reiciendis elit&nbsp;tempora.</p>
+
       <ol>
           <li>Perferendis tempor</li>
           <li>Minim eiusmod </li>
           <li>Tempor</li>
           <li>Minus quia sint</li>
       </ol>
-
-      <p>Quos atque officia quod. <i>Suscipit delectus</i> cupidatat, quia nulla numquam aute cillum proident. Maiores iusto culpa molestias quam id tenetur saepe impedit reiciendis itaque ducimus itaque nostrud. Tempor aliquip, culpa earum itaque sed consequatur minus aliquip reprehenderit nihil veniam tempora do maxime omnis reiciendis elit&nbsp;tempora.</p>
 
       <h2>Voluptates mollitia quod tempore laboris&nbsp;commodi</h2>
 
@@ -102,7 +102,7 @@
 
       <h6>Heading level 6</h6>
 
-      <p>Paragraph with <b>bold</b>, <i>italic</i>, <a href="#top">link</a> and <code>code</code> styles. * Stars show the ideal range * of the line-length.</p>
+      <p>Paragraph with <b>bold</b>, <i>italic</i>, <a href="#top">link</a> and <code>code</code> styles.</p>
 
       <blockquote><p>Blockquote</p></blockquote>
 
