Experimentation with baseline grid

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </nav>
   </header>
 
-  <section>
+  <section class="baseline">
     <div class="container typeset">
       <h1>Lorem ipsum dolor sit&nbsp;amet</h1>
 
