--- a/index.html
+++ b/index.html
@@ -25,103 +25,209 @@
 <body>
 
   <header class="global-header">
-    <h1 class="global-header__logo">Sassline</h1>
+    <h1 class="global-header__logo"><a href="http://sassline.com">Sassline</a></h1>
     <nav class="main-nav">
       <ul class="main-nav__list">
         <li><span id="gridtoggle">Toggle Grid</span></li
-       ><li><a href="http://sassline.com">Website</a></li
-       ><li><a href="http://github.com/designbyjake/sassline">Github</a></li>
+       ><li><a href="https://github.com/designbyjake/sassline">Github</a></li>
       </ul>
     </nav>
   </header>
 
-  <section>
-    <div id="baseline" class="container typeset">
-      <h1>Lorem ipsum dolor sit&nbsp;amet</h1>
+  <section id="baseline">
+    <div class="section typeset">
+      <div class="single">
+        <h1>Lorem ipsum dolor sit&nbsp;amet</h1>
 
-      <p class="caption">Labore reprehenderit corporis ullam distinctio&nbsp;ex.</p>
+        <p class="caption">Labore reprehenderit corporis ullam distinctio&nbsp;ex.</p>
 
-      <p>Consectetur adipisicing elit, alias at autem magna aliquid <a href="#top">quam proident</a> quis aliquam. temporibus minus eius veniam cupidatat ex, voluptas fuga, quos, mollitia incidunt do officia facilis. molestiae consequat excepturi laborum perferendis tempor minim eiusmod minim minus quia&nbsp;sint.</p>
+        <p>Consectetur adipisicing elit, alias at autem magna aliquid <a href="#">quam proident</a> quis aliquam. temporibus minus eius veniam cupidatat ex, voluptas fuga, quos, mollitia incidunt do officia facilis. molestiae consequat excepturi laborum perferendis tempor minim eiusmod minim minus quia&nbsp;sint.</p>
 
-      <p>Quos atque officia quod. <i>Suscipit delectus</i> cupidatat, quia nulla numquam aute cillum proident. Maiores iusto culpa molestias quam id tenetur saepe impedit reiciendis itaque ducimus itaque nostrud. Tempor aliquip, culpa earum itaque sed consequatur minus aliquip reprehenderit nihil veniam tempora do maxime omnis reiciendis elit&nbsp;tempora.</p>
+        <p>Quos atque officia quod. <i>Suscipit delectus</i> cupidatat, quia nulla numquam aute cillum proident. Maiores iusto culpa molestias quam id tenetur saepe impedit reiciendis itaque ducimus itaque nostrud. Tempor aliquip, culpa earum itaque sed consequatur minus aliquip reprehenderit nihil veniam tempora do maxime omnis reiciendis elit&nbsp;tempora.</p>
 
-      <ol>
-          <li>Perferendis tempor</li>
-          <li>Minim eiusmod </li>
-          <li>Tempor</li>
-          <li>Minus quia sint</li>
-      </ol>
+        <ol>
+            <li>Perferendis tempor</li>
+            <li>Minim eiusmod </li>
+            <li>Tempor</li>
+            <li>Minus quia sint</li>
+        </ol>
 
-      <h2>Voluptates mollitia quod tempore laboris&nbsp;commodi</h2>
+        <h2>Voluptates mollitia quod tempore laboris&nbsp;commodi</h2>
 
-      <p>Proident dolores corrupti consequatur voluptatibus labore commodi quos. <b>Incidunt mollitia</b> tempora assumenda laborum voluptate accusamus dolore optio incididunt. Maiores at duis consequatur corrupti consectetur, aliquam optio commodo accusamus distinctio, necessitatibus&nbsp;nostrum.</p>
+        <p>Proident dolores corrupti consequatur voluptatibus labore commodi quos. <b>Incidunt mollitia</b> tempora assumenda laborum voluptate accusamus dolore optio incididunt. Maiores at duis consequatur corrupti consectetur, aliquam optio commodo accusamus distinctio, necessitatibus&nbsp;nostrum.</p>
 
-      <p>Optio, nesciunt, quo, fugiat, blanditiis at quas excepturi quae maiores vel corrupti voluptate cupiditate nemo! In, eius quidem harum quibusdam ratione non. Iste, deleniti, fugit, voluptas aperiam qui adipisci provident ab accusantium possimus eveniet voluptate&nbsp;consectetur!</p>
+        <p>Optio, nesciunt, quo, fugiat, blanditiis at quas excepturi quae maiores vel corrupti voluptate cupiditate nemo! In, eius quidem harum quibusdam ratione non. Iste, deleniti, fugit, voluptas aperiam qui adipisci provident ab accusantium possimus eveniet voluptate&nbsp;consectetur!</p>
 
-      <h2>Repellat optio</h2>
+        <h2>Repellat optio</h2>
 
-      <h3>Ad perferendis omnis</h3>
+        <h3>Ad perferendis omnis</h3>
 
-      <p>Pariatur animi quis. Dolorem cupiditate <a href="#top">praesentium duis</a> iusto corrupti nobis nostrud, exercitation consequatur. Nulla minim dignissimos reprehenderit voluptatem. Recusandae delectus iure vel asperiores saepe dolorum omnis eu aliquam&nbsp;similique.</p>
+        <p>Pariatur animi quis. Dolorem cupiditate <a href="#">praesentium duis</a> iusto corrupti nobis nostrud, exercitation consequatur. Nulla minim dignissimos reprehenderit voluptatem. Recusandae delectus iure vel asperiores saepe dolorum omnis eu aliquam&nbsp;similique.</p>
 
-      <blockquote><p>Fuga rerum laboris officia cupidatat, excepteur aliquid ut quis facere, cumque harum optio dignissimos. Duis repellat tempore dolor blanditiis alias impedit officiis ut&nbsp;consectetur.</p></blockquote>
+        <blockquote><p>Fuga rerum laboris officia cupidatat, excepteur aliquid ut quis facere, cumque harum optio dignissimos. Duis repellat tempore dolor blanditiis alias impedit officiis ut&nbsp;consectetur.</p></blockquote>
 
-      <pre><code>body {
-  color: blue;
+        <pre><code>body {
+    color: blue;
 }</code></pre>
 
-      <h4>Quibusdam illum quo</h4>
+        <h4>Quibusdam illum quo</h4>
 
-      <p>Quos laboris eos, laborum animi. Ea blanditiis ducimus fugiat officia nostrud consectetur recusandae excepteur. Quis qui maiores distinctio facilis saepe&nbsp;eos.</p>
+        <p>Quos laboris eos, laborum animi. Ea blanditiis ducimus fugiat officia nostrud consectetur recusandae excepteur. Quis qui maiores distinctio facilis saepe&nbsp;eos.</p>
 
-      <h5>Consectetur nobis consequat voluptates&nbsp;eiusmod</h5>
+        <h5>Consectetur nobis consequat voluptates&nbsp;eiusmod</h5>
 
-      <p>Iure vel nostrud repellendus. <b>Nostrud</b> autem consequatur, provident officiis qui, mollit exercitation. Veniam minus cillum suscipit aliqua, tenetur. Anim mollitia necessitatibus ad quos consectetur voluptatem do&nbsp;<a href="#top">corporis</a>.</p>
+        <p>Iure vel nostrud repellendus. <b>Nostrud</b> autem consequatur, provident officiis qui, mollit exercitation. Veniam minus cillum suscipit aliqua, tenetur. Anim mollitia necessitatibus ad quos consectetur voluptatem do&nbsp;<a href="#">corporis</a>.</p>
 
-      <ul>
-          <li>Perferendis tempor</li>
-          <li>Minim eiusmod </li>
-          <li>Tempor</li>
-          <li>Minus quia sint</li>
-      </ul>
+        <ul>
+            <li>Perferendis tempor</li>
+            <li>Minim eiusmod </li>
+            <li>Tempor</li>
+            <li>Minus quia sint</li>
+        </ul>
 
-      <p>Corporis eligendi minim, enim proident reprehenderit iusto. <i>Reprehenderit</i> commodo commodi, repudiandae voluptas saepe sint libero. Praesentium eius distinctio ullamco vero iusto praesentium eligendi animi. Consectetur dolore vero similique dolore, ut labore&nbsp;omnis.</p>
+        <p>Corporis eligendi minim, enim proident reprehenderit iusto. <i>Reprehenderit</i> commodo commodi, repudiandae voluptas saepe sint libero. Praesentium eius distinctio ullamco vero iusto praesentium eligendi animi. Consectetur dolore vero similique dolore, ut labore&nbsp;omnis.</p>
 
-      <h6>Maxime alias anim similique</h6>
+        <h6>Maxime alias anim similique</h6>
 
-      <p>Omnis corporis assumenda nisi ullam dolores culpa repellat. Molestias praesentium necessitatibus minus, reiciendis officiis commodo incidunt. Consectetur nostrud odio numquam&nbsp;tenetur.</p>
+        <p>Omnis corporis assumenda nisi ullam dolores culpa repellat. Molestias praesentium necessitatibus minus, reiciendis officiis commodo incidunt. Consectetur nostrud odio numquam&nbsp;tenetur.</p>
 
-      <hr>
+        <hr>
 
-      <h1>Heading level 1</h1>
+        <h1>Heading level 1</h1>
 
-      <h2>Heading level 2</h2>
+        <h2>Heading level 2</h2>
 
-      <h3>Heading level 3</h3>
+        <h3>Heading level 3</h3>
 
-      <h4>Heading level 4</h4>
+        <h4>Heading level 4</h4>
 
-      <h5>Heading level 5</h5>
+        <h5>Heading level 5</h5>
 
-      <h6>Heading level 6</h6>
+        <h6>Heading level 6</h6>
 
-      <p>Paragraph with <b>bold</b>, <i>italic</i>, <a href="#top">link</a> and <code>code</code> styles.</p>
+        <p>Paragraph with <b>bold</b>, <i>italic</i>, <a href="#">link</a> and <code>code</code> styles.</p>
 
-      <blockquote><p>Blockquote</p></blockquote>
+        <blockquote><p>Blockquote</p></blockquote>
 
-      <p class="caption">Caption text</p>
+        <p class="caption">Caption text</p>
 
-      <ol>
-          <li>Ordered list element one</li>
-          <li>Ordered list element two</li>
-          <li>Ordered list element three</li>
-      </ol>
+        <ol>
+            <li>Ordered list element one</li>
+            <li>Ordered list element two</li>
+            <li>Ordered list element three</li>
+        </ol>
 
-      <ul>
-          <li>Unordered list element one</li>
-          <li>Unordered list element two</li>
-          <li>Unordered list element three</li>
-      </ul>
+        <ul>
+            <li>Unordered list element one</li>
+            <li>Unordered list element two</li>
+            <li>Unordered list element three</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="section typeset">
+      <div class="column column--duo">
+        <h6>Column one</h6>
+        <p>Consectetur adipisicing elit, alias at autem magna aliquid <a href="#">quam proident</a> quis aliquam. temporibus minus eius veniam cupidatat ex, voluptas fuga, quos, mollitia incidunt do officia facilis. molestiae consequat excepturi laborum perferendis tempor minim eiusmod minim minus quia&nbsp;sint.</p>
+      </div>
+
+      <div class="column column--duo">
+        <h6>Column two</h6>
+        <p>Quos atque officia quod. <i>Suscipit delectus</i> cupidatat, quia nulla numquam aute cillum proident. Maiores iusto culpa molestias quam id tenetur saepe impedit reiciendis itaque ducimus itaque nostrud. Tempor aliquip, culpa earum itaque sed consequatur minus aliquip reprehenderit nihil veniam tempora do maxime omnis reiciendis elit&nbsp;tempora.</p>
+      </div>
+    </div>
+
+    <div class="section typeset">
+      <div class="column column--trio">
+        <h6>Column one</h6>
+        <p>Consectetur adipisicing elit, alias at autem magna aliquid <a href="#">quam proident</a> quis aliquam. temporibus minus eius veniam cupidatat ex, voluptas fuga, quos, mollitia incidunt do officia facilis. molestiae consequat excepturi laborum perferendis tempor minim eiusmod minim minus quia&nbsp;sint.</p>
+      </div>
+
+      <div class="column column--trio">
+        <h6>Column two</h6>
+        <p>Quos atque officia quod. <i>Suscipit delectus</i> cupidatat, quia nulla numquam aute cillum proident. Maiores iusto culpa molestias quam id tenetur saepe impedit reiciendis itaque ducimus itaque nostrud. Tempor aliquip, culpa earum itaque sed consequatur minus aliquip reprehenderit nihil veniam tempora do maxime omnis reiciendis elit&nbsp;tempora.</p>
+      </div>
+
+      <div class="column column--trio">
+        <h6>Column three</h6>
+        <p>Quos atque officia quod. <i>Suscipit delectus</i> cupidatat, quia nulla numquam aute cillum proident. Maiores iusto culpa molestias quam id tenetur saepe impedit reiciendis itaque ducimus itaque nostrud. Tempor aliquip, culpa earum itaque sed consequatur minus aliquip reprehenderit nihil veniam tempora do maxime omnis reiciendis elit&nbsp;tempora.</p>
+      </div>
+    </div>
+
+    <div class="section typeset">
+      <div class="column column--quad">
+        <h6>Column one</h6>
+        <p>Consectetur adipisicing elit, alias at autem magna aliquid <a href="#">quam proident</a> quis aliquam. temporibus minus eius veniam cupidatat ex, voluptas fuga, quos, mollitia incidunt do officia facilis. molestiae consequat excepturi laborum perferendis tempor minim eiusmod minim minus quia&nbsp;sint.</p>
+      </div>
+
+      <div class="column column--quad">
+        <h6>Column two</h6>
+        <p>Quos atque officia quod. <i>Suscipit delectus</i> cupidatat, quia nulla numquam aute cillum proident. Maiores iusto culpa molestias quam id tenetur saepe impedit reiciendis itaque ducimus itaque nostrud. Tempor aliquip, culpa earum itaque sed consequatur minus aliquip reprehenderit nihil veniam tempora do maxime omnis reiciendis elit&nbsp;tempora.</p>
+      </div>
+
+      <div class="column column--quad">
+        <h6>Column three</h6>
+        <p>Quos atque officia quod. <i>Suscipit delectus</i> cupidatat, quia nulla numquam aute cillum proident. Maiores iusto culpa molestias quam id tenetur saepe impedit reiciendis itaque ducimus itaque nostrud. Tempor aliquip, culpa earum itaque sed consequatur minus aliquip reprehenderit nihil veniam tempora do maxime omnis reiciendis elit&nbsp;tempora.</p>
+      </div>
+
+      <div class="column column--quad">
+        <h6>Column four</h6>
+        <p>Quos atque officia quod. <i>Suscipit delectus</i> cupidatat, quia nulla numquam aute cillum proident. Maiores iusto culpa molestias quam id tenetur saepe impedit reiciendis itaque ducimus itaque nostrud. Tempor aliquip, culpa earum itaque sed consequatur minus aliquip reprehenderit nihil veniam tempora do maxime omnis reiciendis elit&nbsp;tempora.</p>
+      </div>
+    </div>
+
+    <div class="section typeset">
+      <div class="column column--main">
+        <h6>Main column</h6>
+        <p>Consectetur adipisicing elit, alias at autem magna aliquid <a href="#">quam proident</a> quis aliquam. temporibus minus eius veniam cupidatat ex, voluptas fuga, quos, mollitia incidunt do officia facilis. molestiae consequat excepturi laborum perferendis tempor minim eiusmod minim minus quia&nbsp;sint.</p>
+
+        <p>Consectetur adipisicing elit, alias at autem magna aliquid <a href="#">quam proident</a> quis aliquam. temporibus minus eius veniam cupidatat ex, voluptas fuga, quos, mollitia incidunt do officia facilis. molestiae consequat excepturi laborum perferendis tempor minim eiusmod minim minus quia&nbsp;sint.</p>
+      </div>
+
+      <div class="column column--sidebar">
+        <h6>Sidebar</h6>
+        <p>Quos atque officia quod. <i>Suscipit delectus</i> cupidatat, quia nulla numquam aute cillum proident. Maiores iusto culpa molestias quam id tenetur saepe impedit reiciendis itaque ducimus itaque nostrud. Tempor aliquip, culpa earum itaque sed consequatur minus&nbsp;aliquip.</p>
+      </div>
+    </div>
+
+    <div class="section typeset">
+      <div class="column column--sidebar">
+        <h6>Sidebar</h6>
+        <p>Quos atque officia quod. <i>Suscipit delectus</i> cupidatat, quia nulla numquam aute cillum proident. Maiores iusto culpa molestias quam id tenetur saepe impedit reiciendis itaque ducimus itaque nostrud. Tempor aliquip, culpa earum itaque sed consequatur minus&nbsp;aliquip.</p>
+      </div>
+
+      <div class="column column--main">
+        <h6>Main column</h6>
+        <p>Consectetur adipisicing elit, alias at autem magna aliquid <a href="#">quam proident</a> quis aliquam. temporibus minus eius veniam cupidatat ex, voluptas fuga, quos, mollitia incidunt do officia facilis. molestiae consequat excepturi laborum perferendis tempor minim eiusmod minim minus quia&nbsp;sint.</p>
+
+        <p>Consectetur adipisicing elit, alias at autem magna aliquid <a href="#">quam proident</a> quis aliquam. temporibus minus eius veniam cupidatat ex, voluptas fuga, quos, mollitia incidunt do officia facilis. molestiae consequat excepturi laborum perferendis tempor minim eiusmod minim minus quia&nbsp;sint.</p>
+      </div>
+    </div>
+
+    <div class="section typeset">
+      <div class="column column--main column--right">
+        <h6>Main column</h6>
+        <p>Consectetur adipisicing elit, alias at autem magna aliquid <a href="#">quam proident</a> quis aliquam. temporibus minus eius veniam cupidatat ex, voluptas fuga, quos, mollitia incidunt do officia facilis. molestiae consequat excepturi laborum perferendis tempor minim eiusmod minim minus quia&nbsp;sint.</p>
+
+        <p class="caption sidenote">This is an inline caption.</p>
+
+        <p>Consectetur adipisicing elit, alias at autem magna aliquid <a href="#">quam proident</a> quis aliquam. temporibus minus eius veniam cupidatat ex, voluptas fuga, quos, mollitia incidunt do officia facilis. molestiae consequat excepturi laborum perferendis tempor minim eiusmod minim minus quia&nbsp;sint.</p>
+
+        <p>Consectetur adipisicing elit, alias at autem magna aliquid <a href="#">quam proident</a> quis aliquam. temporibus minus eius veniam cupidatat ex, voluptas fuga, quos, mollitia incidunt do officia facilis. molestiae consequat excepturi laborum perferendis tempor minim eiusmod minim minus quia&nbsp;sint.</p>
+      </div>
+    </div>
+
+    <div class="section typeset">
+      <div class="column column--main column--left">
+        <h6>Main column</h6>
+        <p>Consectetur adipisicing elit, alias at autem magna aliquid <a href="#">quam proident</a> quis aliquam. temporibus minus eius veniam cupidatat ex, voluptas fuga, quos, mollitia incidunt do officia facilis. molestiae consequat excepturi laborum perferendis tempor minim eiusmod minim minus quia&nbsp;sint.</p>
+
+        <p class="caption sidenote">This is a long inline caption that will probably go across a couple of&nbsp;lines.</p>
+
+        <p>Consectetur adipisicing elit, alias at autem magna aliquid <a href="#">quam proident</a> quis aliquam. temporibus minus eius veniam cupidatat ex, voluptas fuga, quos, mollitia incidunt do officia facilis. molestiae consequat excepturi laborum perferendis tempor minim eiusmod minim minus quia&nbsp;sint.</p>
+
+        <p>Consectetur adipisicing elit, alias at autem magna aliquid <a href="#">quam proident</a> quis aliquam. temporibus minus eius veniam cupidatat ex, voluptas fuga, quos, mollitia incidunt do officia facilis. molestiae consequat excepturi laborum perferendis tempor minim eiusmod minim minus quia&nbsp;sint.</p>
+      </div>
     </div>
   </section>
 
