--- a/index.html
+++ b/index.html
@@ -7,18 +7,7 @@
   <link rel="stylesheet" href="/assets/css/style.min.css">
   <link rel="shortcut icon" href="/assets/img/favicon.ico">
   <script src="/assets/js/responsive-nav.min.js"></script>
-  <script>
-  // Example of how to load in a smaller Typekit kit at smaller viewport widths. Every little helps.
-  var kit;
-  if( window.innerWidth < 800 ) {
-    // Smaller kit - default characters (swap in your kit code)
-    kit='xxx1xxx';
-  } else {
-    // Larger kit - all characters enabled (swap in your kit code)
-    kit='xxx2xxx';
-  };
-  document.write('\x3Cscript src="//use.typekit.net/'+kit+'.js">\x3C/script>');
-  </script>
+  <script src="//use.typekit.net/xxx1xxx.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
 </head>
 
