Tidying up a few things

--- a/index.html
+++ b/index.html
@@ -111,17 +111,21 @@
             <li>Unordered list element two</li>
             <li>Unordered list element three</li>
         </ul>
+
+        <div class="button-align">
+          <button>Submit</button>
+        </div>
       </div>
     </div>
 
     <div class="section typeset">
       <div class="column column--duo">
-        <h6>Column one</h6>
+        <h1>Super long title which goes over a couple of lines</h1>
         <p>Consectetur adipisicing elit, alias at autem magna aliquid <a href="#">quam proident</a> quis aliquam. temporibus minus eius veniam cupidatat ex, voluptas fuga, quos, mollitia incidunt do officia facilis. molestiae consequat excepturi laborum perferendis tempor minim eiusmod minim minus quia&nbsp;sint.</p>
       </div>
 
       <div class="column column--duo">
-        <h6>Column two</h6>
+        <h3>A second column</h3>
         <p>Quos atque officia quod. <i>Suscipit delectus</i> cupidatat, quia nulla numquam aute cillum proident. Maiores iusto culpa molestias quam id tenetur saepe impedit reiciendis itaque ducimus itaque nostrud. Tempor aliquip, culpa earum itaque sed consequatur minus aliquip reprehenderit nihil veniam tempora do maxime omnis reiciendis elit&nbsp;tempora.</p>
       </div>
     </div>
