--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <section id="baseline">
     <div class="section typeset">
-      <div class="single">
+      <div class="single-measure">
         <h1>Lorem ipsum dolor sit&nbsp;amet</h1>
 
         <p class="caption">Labore reprehenderit corporis ullam distinctio&nbsp;ex.</p>
