Update Typekit script template

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="/assets/css/style.min.css">
   <link rel="shortcut icon" href="/assets/img/favicon.ico">
   <script src="/assets/js/responsive-nav.min.js"></script>
-  <script src="//use.typekit.net/xxx1xxx.js"></script>
-  <script>try{Typekit.load();}catch(e){}</script>
+  <script src="https://use.typekit.net/xxx1xxx.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
 
 <body>
